--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,7 @@
     "require-dev": {
         "zendframework/zftool": "^0.1 || ^1.0",
         "zendframework/zenddiagnostics": "^1.0",
-        "sensiolabs/security-checker": "^3.0",
-        "phpunit/phpunit": "^5.5",
-        "squizlabs/php_codesniffer": "^2.7",
-        "phpmd/phpmd": "^2.4",
-        "sebastian/phpcpd": "^2.0",
-        "phploc/phploc": "^3.0",
-        "theseer/phpdox": "^0.8 || ^1.0"
+        "ise/php-metapackage-development": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -51,7 +45,7 @@
         "phpunit": "phpunit -c ./phpunit.xml.dist",
         "phpcs": "phpcs",
         "phpcbf": "phpcbf",
-        "phpmd": "phpmd ./module html --reportfile ./build/logs/phpmd.html --suffixes php,phtml ./phpmd.xml.dist",
+        "phpmd": "phpmd . html --reportfile ./build/logs/phpmd.html --suffixes php,phtml --exclude vendor,build ./phpmd.xml.dist",
         "phpcpd": "phpcpd . --exclude=vendor --exclude=data"
     }
 }
