--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "homepage": "https://github.com/internalsystemerror/ise-module-bootstrap",
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zend-eventmanager": "^2.5",
-        "zendframework/zend-form": "^2.5",
-        "zendframework/zend-json": "^2.5",
-        "zendframework/zend-modulemanager": "^2.5",
-        "zendframework/zend-mvc": "^2.5",
-        "zendframework/zend-navigation": "^2.5",
-        "zendframework/zend-view": "^2.5",
+        "zendframework/zend-eventmanager": "^2.5 || ^3.0",
+        "zendframework/zend-form": "^2.5 || ^3.0",
+        "zendframework/zend-json": "^2.5 || ^3.0",
+        "zendframework/zend-modulemanager": "^2.5 || ^3.0",
+        "zendframework/zend-mvc": "^2.5 || ^3.0",
+        "zendframework/zend-navigation": "^2.5 || ^3.0",
+        "zendframework/zend-view": "^2.5 || ^3.0",
         "rwoverdijk/assetmanager": "^1.7",
         "nervo/yuicompressor": "2.4.7"
     },
