--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "IseTest\\Bootstrap\\": "tests"
+            "IseTest\\Bootstrap\\": "test"
         }
     },
     "extra": {
@@ -40,7 +40,7 @@
         "cs-fix": "phpcbf",
         "cs-check": [
             "phpcs",
-            "phpmd ./config,./src,./tests html --reportfile ./build/logs/phpmd.html --suffixes php,phtml ./phpmd.xml.dist",
+            "phpmd ./config,./src,./test html --reportfile ./build/logs/phpmd.html --suffixes php,phtml ./phpmd.xml.dist",
             "phpcpd . --exclude=assets --exclude=build --exclude=vendor "
         ]
     }
