Fix test, add gitattributes

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     "require-dev": {
         "ise/php-metapackage-development": "^1.0"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Ise\\Bootstrap\\": "src"
@@ -29,7 +31,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "0.1.x-dev",
+            "dev-develop": "1.0-x-dev"
         }
     },
     "scripts": {
