--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "IseTest\\Bootstrap\\": "test"
+            "IseTest\\Bootstrap\\": "test",
+            "ZendTest\\Form\\": "vendor/zendframework/zend-form/test"
         }
     },
     "extra": {
@@ -36,11 +37,11 @@
         }
     },
     "scripts": {
-        "test": "phpunit -c ./phpunit.xml.dist",
+        "test": "phpunit -c phpunit.xml.dist",
         "cs-fix": "phpcbf",
         "cs-check": [
             "phpcs",
-            "phpmd ./config,./src,./test html --reportfile ./build/logs/phpmd.html --suffixes php,phtml ./phpmd.xml.dist",
+            "phpmd config,src,test html --reportfile build/logs/phpmd.html --suffixes php,phtml phpmd.xml.dist",
             "phpcpd . --exclude=assets --exclude=build --exclude=vendor "
         ]
     }
