--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,34 @@
 {
     "name": "ise/ise-module-bootstrap",
     "description": "Twitter Bootstrap module for Zend Framework used by Internalsystemerror Limited",
+    "type": "library",
     "license": "BSD-3-Clause",
     "homepage": "https://github.com/internalsystemerror/ise-module-bootstrap",
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "zendframework/zend-form": "^2.5 || ^3.0",
-        "zendframework/zend-navigation": "^2.5 || ^3.0",
-        "zendframework/zend-view": "^2.5 || ^3.0",
-        "rwoverdijk/assetmanager": "^1.7", 
-        "nervo/yuicompressor": "2.4.7"
-    },
-    "require-dev": {
-        "ise/php-metapackage-development": "^1.0",
-        "zendframework/zend-i18n": "^2.6 || ^3.0"
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "config": {
+        "classmap-authoritative": true,
+        "discard-changes": true,
+        "optimize-autoloader": true,
+        "prepend-autoloader": true,
+        "process-timeout": 5000,
+        "sort-packages": true
+    },
+    "conflict": {
+        "nervo/yuicompressor": "2.4.8"
+    },
+    "require": {
+        "php": "^7.1",
+        "rwoverdijk/assetmanager": "^1.7.3",
+        "zendframework/zend-form": "^2.12.0",
+        "zendframework/zend-navigation": "^2.9.0",
+        "zendframework/zend-view": "^2.10.0"
+    },
+    "require-dev": {
+        "ise/php-metapackage-development": "^2.0.0",
+        "nervo/yuicompressor": "^2.4.7",
+        "zendframework/zend-i18n": "^2.9.0"
+    },
     "autoload": {
         "psr-4": {
             "Ise\\Bootstrap\\": "src"
@@ -35,12 +47,13 @@
         }
     },
     "scripts": {
-        "test": "phpunit -c phpunit.xml.dist",
-        "cs-fix": "phpcbf",
+        "analyse": "phpstan analyse --level 4 config src test",
         "cs-check": [
             "phpcs",
             "phpmd config,src,test html --reportfile build/logs/phpmd.html --suffixes php,phtml phpmd.xml.dist",
             "phpcpd . --exclude=assets --exclude=build --exclude=vendor "
-        ]
+        ],
+        "cs-fix": "phpcbf",
+        "test": "phpunit"
     }
 }
