--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require-dev": {
         "ise/php-metapackage-development": "^2.0.0",
         "nervo/yuicompressor": "^2.4.7",
-        "zendframework/zend-i18n": "^2.9.0"
+        "zendframework/zend-json": "^3.1.0",
+        "zendframework/zend-mvc-plugin-flashmessenger": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
