--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "classmap-authoritative": true,
+        "classmap-authoritative": false,
         "discard-changes": true,
         "optimize-autoloader": true,
         "prepend-autoloader": true,
@@ -25,20 +25,19 @@
         "zendframework/zend-view": "^2.10.0"
     },
     "require-dev": {
-        "ise/php-metapackage-development": "^2.0.0",
+        "ise/php-metapackage-development": "^2.0.1",
         "nervo/yuicompressor": "^2.4.7",
         "zendframework/zend-json": "^3.1.0",
         "zendframework/zend-mvc-plugin-flashmessenger": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
-            "Ise\\Bootstrap\\": "src"
+            "Ise\\Bootstrap\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "IseTest\\Bootstrap\\": "test",
-            "ZendTest\\Form\\": "vendor/zendframework/zend-form/test"
+            "IseTest\\Bootstrap\\": "test/"
         }
     },
     "extra": {
@@ -48,7 +47,7 @@
         }
     },
     "scripts": {
-        "analyse": "phpstan analyse --level 4 config src test",
+        "analyse": "phpstan analyse -l 0 src",
         "cs-check": [
             "phpcs",
             "phpmd config,src,test html --reportfile build/logs/phpmd.html --suffixes php,phtml phpmd.xml.dist",
