--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "ise/php-metapackage-development": "^2.0.1",
         "nervo/yuicompressor": "^2.4.7",
         "zendframework/zend-json": "^3.1.0",
+        "zendframework/zend-i18n": "^2.9.0",
         "zendframework/zend-mvc-plugin-flashmessenger": "^1.0.0"
     },
     "autoload": {
@@ -47,7 +48,7 @@
         }
     },
     "scripts": {
-        "analyse": "phpstan analyse -l 0 src",
+        "analyse": "phpstan analyse -l 4 config src",
         "cs-check": [
             "phpcs",
             "phpmd config,src,test html --reportfile build/logs/phpmd.html --suffixes php,phtml phpmd.xml.dist",
